<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"
            android:checked="true"/>
        <item
            android:id="@+id/nav_usage"
            android:icon="@drawable/ic_done_all_black_24dp"
            android:title="@string/usage" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_copyright_black_24dp"
            android:title="@string/credits" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/exit" />
    </group>

</menu>
